fix get non existing User by id